[gd_scene load_steps=12 format=3 uid="uid://b1ot6gn6tms6h"]

[ext_resource type="Script" uid="uid://uepffa8m3q1j" path="res://scripts/player/player_3d_template.gd" id="1_dpokc"]
[ext_resource type="PackedScene" uid="uid://codrtii11iqw5" path="res://objects/player/player_3d.tscn" id="2_4dj54"]
[ext_resource type="AudioStream" uid="uid://bhoyegbjust84" path="res://audio/sounds/robot_land.wav" id="3_kbqxf"]
[ext_resource type="Script" uid="uid://dpnto4giofeos" path="res://scripts/skins/skeleton_skin.gd" id="3_vre6p"]
[ext_resource type="AudioStream" uid="uid://b4x0f4pgfifoo" path="res://audio/sounds/robot_jump.wav" id="4_1v0dq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e8pdu"]
radius = 0.4

[sub_resource type="Curve" id="Curve_3f17x"]
_data = [Vector2(0, 0.742241), 0.0, 0.0, 0, 0, Vector2(0.139952, 0.986755), 0.129787, 0.129787, 0, 0, Vector2(0.631579, 1), 0.0, 0.0, 0, 0, Vector2(0.785885, 0.873668), -1.98736, -1.98736, 0, 0, Vector2(1, 0.0148119), -5.26067, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_8asvs"]
width = 32
curve = SubResource("Curve_3f17x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqdcj"]
lifetime_randomness = 0.33
emission_shape = 1
emission_sphere_radius = 0.1
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 0.1
initial_velocity_max = 0.35
gravity = Vector3(0, 0.5, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 0.199998
scale_min = 0.8
scale_max = 1.2
scale_curve = SubResource("CurveTexture_8asvs")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kpdwg"]
shading_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.536729, 0.511356, 0.854902, 1)

[sub_resource type="SphereMesh" id="SphereMesh_vpbss"]
material = SubResource("StandardMaterial3D_kpdwg")
radius = 0.15
height = 0.3
radial_segments = 8
rings = 8

[node name="Player3DTemplate" type="CharacterBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_dpokc")
lane_spacing = 3.0
jump_duration = 0.8
jump_height = 3.0

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_e8pdu")

[node name="SkeletonSkin" parent="." instance=ExtResource("2_4dj54")]
unique_name_in_owner = true
script = ExtResource("3_vre6p")

[node name="DustParticles" type="GPUParticles3D" parent="SkeletonSkin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.136607, -0.190934)
cast_shadow = 0
gi_mode = 0
amount = 10
lifetime = 0.7
explosiveness = 0.05
process_material = SubResource("ParticleProcessMaterial_tqdcj")
draw_pass_1 = SubResource("SphereMesh_vpbss")

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_kbqxf")
volume_db = 1.0

[node name="JumpSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_1v0dq")
volume_db = 1.0

[node name="DeathSensor" type="RayCast3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0, 1, 0)
debug_shape_thickness = 5
